# serverless-llm-app-factory

./: .gitignore  README.md  docker-compose.yaml  fly.toml  pyproject.toml
app/: serve_r8_llm.py  serve_r8_prompt_to_sound_sample.py
apps/: custom_music_sample_r8.py  muzikagent_r8.py
apps/todo_extractor/: chainlit.Dockerfile  chainlit.md  fastapi.Dockerfile
apps/todo_extractor/.chainlit/: config.toml
